# django-typesense

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Pipfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  settings.py  setup.py  test_settings.py  tox.ini
.github/workflows/: python-package.yml
type_sense/: apps.py  client.py  models.py
type_sense/tests/: test_typesense.py
typesense/: apps.py
typesense/tests/: test_typesense.py
