[tool.poetry]
name = "type_sense"
version = "0.1.0"
description = ""
authors = ["Justin Köstinger <jkoestinger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
flake8 = "^3.9.1"
isort = "^5.8.0"
tox = "^3.23.0"
black = "^21.4b2"
pre-commit = "^2.12.1"
pytest = "^6.2.3"
pytest-django = "^4.2.0"
typesense = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
